objects/TPO_MPPT__c.object
<CustomObject>
    <description>MPPT strings and Module configuration</description>
    <fields>
        <fullName>Ac_Cabinet_Type__c</fullName>
        <label>Ac Cabinet Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Cabinet__c</fullName>
        <label>DC Cabinet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Link_2__c</fullName>
        <label>Document Link 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <label>Document Link 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Name_1__c</fullName>
        <label>Inverter Name 1</label>
        <length>237</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Name_2__c</fullName>
        <label>Inverter Name 2</label>
        <length>237</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Quantity2__c</fullName>
        <label>Inverter Quantity2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Quantity__c</fullName>
        <label>Inverter Quantity</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <label>Item ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPPT_1_Module_Qty__c</fullName>
        <label>MPPT 1 Module Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPPT_1_String_Qty__c</fullName>
        <label>MPPT 1 String Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPPT_2_Module_Qty__c</fullName>
        <label>MPPT 2 Module Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPPT_2_String_Qty__c</fullName>
        <label>MPPT 2 String Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPPT_3_Module_Qty__c</fullName>
        <label>MPPT 3 Module Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPPT_3_String_Qty__c</fullName>
        <label>MPPT 3 String Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <picklist>
            <picklistValues>
                <fullName>245W (Model SPR-245NE-WHT-D)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SPR-245NE-WHT (IN-ROOF SL)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Quantity__c</fullName>
        <label>Module Quantity</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface__c</fullName>
        <label>Surface</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Module_Name_Qty__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Module Name Qty</label>
        <length>237</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wats_Power__c</fullName>
        <label>Wats Power</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>TPO MPPT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ac_Cabinet_Type__c</columns>
        <columns>Inverter_Quantity__c</columns>
        <columns>Inverter_Quantity2__c</columns>
        <columns>Module_Quantity__c</columns>
        <columns>DC_Cabinet__c</columns>
        <columns>Document_Link__c</columns>
        <columns>Item_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MPPT-{0000000}</displayFormat>
        <label>TPO MPPT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPO MPPT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>